kurbenetes/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: sn4yas/conception-logicielle:latest
          # Lien de l'image que vous avez construit pour votre brique applicative à changer
          #image: ragatzino/frontend-demo-conception-logicielle:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "300m"
          # Permet de charger les variables d'environnement dans votre application via le remplissage d'une ressources "cle" "valeur" kubernetes, le configmap.
          ports:
            - containerPort: 8000
            # Port du serveur lancé : port 8000 par exemple pour une fastapi.. Modifier pour d'autres
